[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/fighter/ledge/ledge_detect.gd" type="Script" id=1]

[node name="chest_ledge_detect" type="Node2D"]
unique_name_in_owner = true
position = Vector2( 6, 4 )
script = ExtResource( 1 )

[node name="gap_detect" type="RayCast2D" parent="."]
unique_name_in_owner = true
process_priority = -1
position = Vector2( -3, -3 )
rotation = -1.57079
cast_to = Vector2( 0, 4 )

[node name="floor_detect" type="RayCast2D" parent="."]
unique_name_in_owner = true
process_priority = -1
position = Vector2( -1, -3 )
cast_to = Vector2( 0, 4 )

[node name="wall_detect" type="RayCast2D" parent="."]
unique_name_in_owner = true
process_priority = -1
position = Vector2( -3, 1 )
rotation = -1.57079
cast_to = Vector2( 0, 4 )
